Slicing refiner gets slicing criteria directly from target path edges.
This simplifies the process and only includes
slicing criteria that are actually part of the target path.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@27472 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c